@@ -1,4 +1,4 @@
-#	$OpenBSD: sshd_config,v 1.86 2012/04/12 02:43:55 djm Exp $
+#	$OpenBSD: sshd_config,v 1.87 2012/07/10 02:19:15 djm Exp $
 
 # This is the sshd server system-wide configuration file.  See
 # sshd_config(5) for more information.
@@ -99,7 +99,7 @@ AuthorizedKeysFile	.ssh/authorized_keys
 #PrintLastLog yes
 #TCPKeepAlive yes
 #UseLogin no
-#UsePrivilegeSeparation yes
+UsePrivilegeSeparation sandbox		# Default for new installations.
 #PermitUserEnvironment no
 #Compression delayed
 #ClientAliveInterval 0
